--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.4.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "@alpinejs/intersect": "^3.13.3"
     }
 }
