--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "devDependencies": {
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.1",
-        "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
-        "vite": "^5.0.0"
+        "vite": "^5.0.0",
+        "@vitejs/plugin-vue": "^5.0.2",
+        "laravel-vite-plugin": "^1.0.0"
     },
     "dependencies": {
         "@inertiajs/vue3": "^1.0.14",
-        "@vitejs/plugin-vue": "^5.0.2",
         "material-icons": "^1.13.12",
         "vue": "^3.4.5"
     }
