--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.0.2",
-        "vue": "^3.4.5"
+        "vue": "^3.4.5",
+        "vue-router": "^4.2.5"
     }
 }
