сделал базовое отображение постов

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
         "baseUrl": ".",
+        "lib": ["ES2018"],
         "paths": {
             "@/*": ["resources/js/*"],
-            "ziggy-js": ["./vendor/tightenco/ziggy"]
         }
     },
     "exclude": ["node_modules", "public"]
