--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "baseUrl": ".",
-        "lib": ["ES2018"],
+        "lib": ["ESNext", "DOM", "ES2015.Promise","ES2015.Proxy","ES2015.Reflect"],
         "paths": {
             "@/*": ["resources/js/*"],
         }
