--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "laravel-vite-plugin": "^1.0.1",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.4.1",
+        "typescript": "^5.3.3",
         "vite": "^5.0.0"
     },
     "dependencies": {
