--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.12",
+        "@tailwindcss/forms": "^0.5.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^1.6.1",
-        "laravel-vite-plugin": "^1.0.1",
+        "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5.3.3",
+        "tailwindcss": "^3.4.0",
         "vite": "^5.0.0"
     },
     "dependencies": {
