--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@ephir/wc": "file:./resources/views/wc",
         "@alpinejs/intersect": "^3.13.5"
     }
 }
