--- a/package.json
+++ b/package.json
@@ -18,5 +18,15 @@
         "vite": "^5.0",
         "vue": "^3.4.0",
         "vue-tsc": "^1.8.27"
+    },
+    "dependencies": {
+        "@radix-ui/colors": "^3.0.0",
+        "@vueuse/core": "^10.9.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "lucide-vue-next": "^0.376.0",
+        "radix-vue": "^1.7.3",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
