--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue-tsc": "^1.8.27"
     },
     "dependencies": {
+        "@iconify/vue": "^4.1.2",
         "@radix-ui/colors": "^3.0.0",
         "@vueuse/core": "^10.9.0",
         "class-variance-authority": "^0.7.0",
