--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "@vueuse/core": "^10.9.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "embla-carousel": "^8.0.2",
+        "embla-carousel-vue": "^8.0.2",
         "lucide-vue-next": "^0.376.0",
         "radix-vue": "^1.7.3",
         "tailwind-merge": "^2.3.0",
