--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@iconify/vue": "^4.1.2",
         "@radix-ui/colors": "^3.0.0",
+        "@vueup/vue-quill": "^1.2.0",
         "@vueuse/core": "^10.9.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
