--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
   "name": "ephir",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
+    "dev": "node --watch --env-file=.env index.mjs",
+    "prod": "node --env-file=.env index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "@fastify/multipart": "^9.0.1",
+    "@fastify/static": "^8.0.2",
+    "chalk": "^5.3.0",
+    "convert-to-webp": "github:eckeriaue/webp-image-converter",
+    "date-fns": "^4.1.0",
+    "fastify": "^5.0.0",
+    "valibot": "^0.42.1"
   },
   "author": "",
   "license": "ISC",
