--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@fastify/multipart": "^9.0.1",
     "@fastify/static": "^8.0.2",
+    "@fastify/view": "^10.0.1",
     "chalk": "^5.3.0",
     "convert-to-webp": "github:eckeriaue/webp-image-converter",
     "date-fns": "^4.1.0",
     "fastify": "^5.0.0",
+    "handlebars": "^4.7.8",
+    "radashi": "^12.1.0",
     "valibot": "^0.42.1"
   },
   "author": "",
