feat: try svelte

--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "ephir",
-  "version": "1.0.0",
-  "main": "index.mjs",
+  "name": "vite-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "node --watch --env-file=.env index.mjs",
-    "prod": "node --env-file=.env index.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node server",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build --ssrManifest --outDir dist/client",
+    "build:server": "vite build --ssr src/entry-server.js --outDir dist/server",
+    "preview": "cross-env NODE_ENV=production node server"
   },
   "dependencies": {
-    "@fastify/multipart": "^9.0.1",
+    "@fastify/middie": "^9.0.2",
     "@fastify/static": "^8.0.2",
-    "@fastify/view": "^10.0.1",
-    "chalk": "^5.3.0",
-    "convert-to-webp": "github:eckeriaue/webp-image-converter",
-    "date-fns": "^4.1.0",
+    "compression": "^1.7.4",
     "fastify": "^5.0.0",
-    "handlebars": "^4.7.8",
     "radashi": "^12.1.0",
-    "valibot": "^0.42.1"
+    "sirv": "^3.0.0"
   },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "cross-env": "^7.0.3",
+    "svelte": "^5.0.3",
+    "vite": "^5.4.9"
+  }
 }
