--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "fastify": "^5.0.0",
     "handlebars": "^4.7.8",
     "radashi": "^12.1.0",
-    "valibot": "^0.42.1"
+    "valibot": "^0.42.1",
+    "vue": "^3.5.12"
   },
   "author": "",
   "license": "ISC",
