--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "chalk": "^5.3.0",
     "convert-to-webp": "github:eckeriaue/webp-image-converter",
     "date-fns": "^4.1.0",
+    "drizzle-kit": "^0.26.2",
+    "drizzle-orm": "^0.35.3",
     "fastify": "^5.0.0",
+    "fastify-plugin": "^5.0.1",
     "handlebars": "^4.7.8",
+    "mysql2": "^3.11.3",
     "radashi": "^12.1.0",
     "valibot": "^0.42.1",
     "vue": "^3.5.12"
