--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-  "name": "ephir",
-  "version": "1.0.0",
-  "main": "index.mjs",
+  "name": "vue-base",
+  "description": "The vue-base starter template for @fastify/vue",
+  "type": "module",
   "scripts": {
-    "dev": "node --watch --env-file=.env index.mjs",
-    "prod": "node --env-file=.env index.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node server.js --dev",
+    "build": "npm run build:client && npm run build:server",
+    "start": "node server.js",
+    "build:client": "vite build --outDir dist/client --ssrManifest",
+    "build:server": "vite build --outDir dist/server --ssr /index.js",
+    "lint": "eslint . --ext .js,.jsx --fix"
   },
   "dependencies": {
-    "@fastify/cookie": "^11.0.1",
-    "@fastify/formbody": "^8.0.1",
-    "@fastify/multipart": "^9.0.1",
-    "@fastify/static": "^8.0.2",
-    "@fastify/view": "^10.0.1",
-    "chalk": "^5.3.0",
-    "convert-to-webp": "github:eckeriaue/webp-image-converter",
-    "date-fns": "^4.1.0",
-    "drizzle-kit": "^0.26.2",
-    "drizzle-orm": "^0.35.3",
+    "@fastify/one-line-logger": "latest",
+    "@fastify/vite": "8.0.0-alpha.2",
+    "@fastify/vue": "1.0.0-alpha.5",
     "fastify": "^5.0.0",
-    "fastify-plugin": "^5.0.1",
-    "handlebars": "^4.7.8",
-    "mysql2": "^3.11.3",
-    "radashi": "^12.1.0",
-    "valibot": "^0.42.1"
+    "unihead": "^0.8.0",
+    "vue": "^3.5.8",
+    "vue-router": "^4.4.5"
   },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.16.0",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-vue": "^8.7.1",
+    "vite": "^5.4.7",
+    "postcss": "^8.4.31",
+    "postcss-nesting": "^12.0.2",
+    "postcss-preset-env": "^7.7.1",
+    "tailwindcss": "^3.4.1"
+  }
 }
