--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,6 +9,7 @@
   },
   "author": "",
   "dependencies": {
+    "@ephir/wc": "^1.0.0",
     "@fastify/cookie": "^11.0.1",
     "@fastify/formbody": "^8.0.1",
     "@fastify/multipart": "^9.0.1",
@@ -19,13 +20,13 @@
     "date-fns": "^4.1.0",
     "drizzle-kit": "^0.26.2",
     "drizzle-orm": "^0.35.3",
+    "ephir": "github:eckeriaue/ephir#ephir-node",
     "fastify": "^5.0.0",
     "fastify-plugin": "^5.0.1",
     "handlebars": "^4.7.8",
     "mysql2": "^3.11.3",
     "radashi": "^12.1.0",
-    "valibot": "^0.42.1",
-    "web": "^1.0.0"
+    "valibot": "^0.42.1"
   },
   "license": "ISC",
   "description": ""
