--- a/packages/wc/package.json
+++ b/packages/wc/package.json
@@ -1,21 +1,17 @@
 {
   "name": "@ephir/wc",
-  "version": "1.0.0",
-  "main": "index.js",
-
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "lit": "^3.2.1"
+    "vue": "^3.5.12"
   },
   "devDependencies": {
-    "typescript": "~5.6.2",
+    "@vitejs/plugin-vue": "^5.1.4",
     "vite": "^5.4.10"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
