--- a/packages/wc/package.json
+++ b/packages/wc/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/vue": "^1.1.5",
     "vue": "^3.5.12"
   },
   "devDependencies": {
