--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,7 @@
     "@fastify/cookie": "^11.0.1",
     "@fastify/formbody": "^8.0.1",
     "@fastify/multipart": "^9.0.1",
+    "@fastify/one-line-logger": "^2.0.0",
     "@fastify/static": "^8.0.2",
     "@fastify/view": "^10.0.1",
     "chalk": "^5.3.0",
