--- a/packages/wc/package.json
+++ b/packages/wc/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@floating-ui/vue": "^1.1.5",
+    "radashi": "^12.1.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
