--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"node --watch --env-file=.env index.mjs\" \"unocss \"./public/views/**/*.hbs\" --out-file \"./public/styles/style.css\" --watch --minify \"",
+    "dev:server-only": "node --watch --env-file=.env index.mjs",
+    "migrate": "drizzle-kit migrate --config=./drizzle.config.js",
+    "generate": "drizzle-kit generate --config=./drizzle.config.js",
+    "dev": "concurrently \"npm run dev:server-only\" \"unocss \"./public/views/**/*.hbs\" --out-file \"./public/styles/style.css\" --watch --minify \"",
     "prod": "node --env-file=.env index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,7 +27,7 @@
     "fastify": "^5.0.0",
     "fastify-plugin": "^5.0.1",
     "handlebars": "^4.7.8",
-    "mysql2": "^3.11.3",
+    "mysql2": "^3.11.4",
     "radashi": "^12.1.0",
     "valibot": "^0.42.1"
   },
