--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "autoprefixer": "^10.4.2",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "htmx.org": "^2.0.3",
+        "hyperscript.org": "^0.9.13",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
