--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@unocss/postcss": "^0.64.0",
+        "@unocss/preset-rem-to-px": "^0.64.0",
+        "@unocss/preset-web-fonts": "^0.64.0",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.7.4",
@@ -14,7 +17,10 @@
         "hyperscript.org": "^0.9.13",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.1.0",
+        "unocss": "^0.64.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@unocss/reset": "^0.64.0"
     }
 }
