feat: make better floating ui

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@alpinejs/focus": "^3.14.8",
+        "@awcodes/alpine-floating-ui": "^3.6.3",
         "@unocss/reset": "^0.64.0"
     }
 }
