--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@alpinejs/focus": "^3.14.8",
         "@awcodes/alpine-floating-ui": "^3.6.3",
         "@editorjs/editorjs": "^2.30.7",
-        "@unocss/reset": "^0.64.0"
+        "@unocss/reset": "^0.64.0",
+        "swiper": "^11.2.0"
     }
 }
