--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
         "@unocss/preset-rem-to-px": "^0.64.0",
         "@unocss/preset-web-fonts": "^0.64.0",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "htmx.org": "^2.0.3",
         "hyperscript.org": "^0.9.13",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.31",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.17",
         "unocss": "^0.64.0",
         "vite": "^5.0"
     },
