--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@editorjs/editorjs": "^2.30.7",
         "@tiptap/core": "^2.11.0",
         "@tiptap/extension-link": "^2.11.0",
+        "@tiptap/extension-placeholder": "^2.11.0",
         "@tiptap/pm": "^2.11.0",
         "@tiptap/starter-kit": "^2.11.0",
         "swiper": "^11.2.0"
