--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^8.2",
         "buglinjo/laravel-webp": "^3.0",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "yieldstudio/tailwind-merge-php": "^0.0.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
