--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     "require": {
         "php": "^8.2",
         "buglinjo/laravel-webp": "^3.0",
+        "intervention/image": "^3.10",
+        "intervention/image-laravel": "^1.3",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "yieldstudio/tailwind-merge-php": "^0.0.3"
