--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.0.9",
         "alpinejs": "^3.14.8",
-        "autoprefixer": "^10.4.20",
         "concurrently": "^9.0.1",
         "hyperscript.org": "^0.9.13",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.49",
-        "tailwindcss": "^3.4.17",
+        "tailwindcss": "^4.0.9",
         "vite": "^5.0"
     },
     "dependencies": {
