--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4.0.9",
+        "@tailwindcss/vite": "^4.0.9",
         "alpinejs": "^3.14.8",
         "concurrently": "^9.0.1",
         "hyperscript.org": "^0.9.13",
